# mini-ml-kernels

./: README.md  pyproject.toml
common/: reference.py
csrc/relu/: relu_naive.cu
kernels/layernorm/: layernorm_naive.cu
kernels/layernorm/tests/: test_layernorm.py
kernels/relu/: relu_opt.cu
scripts/: profile_ncu.sh
tests/: test_relu.py
