[build-system]
requires = ["setuptools>=68", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-ml-kernels"
version = "0.1.0"
description = "CUDA kernels from naive to optimized"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["torch"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
